# python-ags4

./: .gitignore  .gitlab-ci.yml  README.md  changelog.txt  dockerfile  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: test-package.yml
app/: main.py
docs/: README.md  _coverpage.md  _sidebar.md  ags4.md  ags4_cli.md  api-spec-example.json  check.md  conf.py  index.html  index.md  index.rst  modules.rst  paper.bib  paper.md  python_ags4.rst  style.css  usage.md
docs/main-content/: cover.md  userguide.md
examples/: Plot_locations_and_create_strip_log.ipynb
notebooks/: East West Rail BGS Pre October 2018 upload (partial).ags
python_ags4/: AGS4.py  Standard_dictionary_v4_0_3.ags  Standard_dictionary_v4_0_4.ags  Standard_dictionary_v4_1.ags  Standard_dictionary_v4_1_1.ags  Standard_dictionary_v4_2.ags  __init__.py  ags4_cli.py  check.py  utils.py
python_ags4/data/: __init__.py
tests/: DICT.ags  test.xlsx  test_ags4.py  test_batch.py  test_check.py  test_cli.py  test_data.ags  test_data.xlsx  test_python_ags4.py  test_utils.py
tests/test_files/: 4.1-fyi16-1.ags  4.1-rule1-cp1252.ags  4.1-rule1-latin1.ags  4.1-rule1-utf8.ags  4.1-rule1.ags  4.1-rule1.check  4.1-rule10-1.ags  4.1-rule10-2.ags  4.1-rule10-3.ags  4.1-rule10-4.ags  4.1-rule10-5.ags  4.1-rule10-6.ags  4.1-rule10-7.ags  4.1-rule10-8.ags  4.1-rule10-9.ags  4.1-rule10-no errors.ags  4.1-rule10.ags  4.1-rule11-1.ags  4.1-rule11-2.ags  4.1-rule11-3.ags  4.1-rule12.ags  4.1-rule13-1.ags  4.1-rule13-2.ags  4.1-rule14-1.ags  4.1-rule14-2.ags  4.1-rule14-3.ags  4.1-rule15-1.ags  4.1-rule15-2.ags  4.1-rule15-3.ags  4.1-rule16-1.ags  4.1-rule16-2.ags  4.1-rule16-3.ags  4.1-rule16b-2.ags  4.1-rule16b-3.ags  4.1-rule16b-4.ags  4.1-rule16b-5.ags  4.1-rule17-1.ags  4.1-rule17-2.ags  4.1-rule18-1.ags  4.1-rule18-2.ags  (+57 more)
tests/test_utils/: abbreviations.json  benchmark.ags  elrg_abbreviations.json  groupsandheadings.json  types.json  units.json
