[project]
name = "python-ags4"
version = "1.1.0"
description = "A library to read, write, and check AGS4 files using Pandas DataFrames"
authors = [
    {name = "Asitha Senanayake",email = "asitha_sena@yahoo.com"}
]
license = "LGPL-3.0"
license-files = ["LICENSE", "COPYING.LESSER"]
keywords = ["AGS4", "geotechnical", "geoenvironmental"]
classifiers = [
"Development Status :: 5 - Production/Stable",
"License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
"Programming Language :: Python :: 3"
]
readme = "README.md"
include = [
    { path = "LICENSE", format = "sdist" },
    { path = "COPYING.LESSER", format = "sdist" }
]
requires-python = ">=3.9"
dependencies = [
    "pandas (>=2.1,<3.0)",
    "openpyxl (>=3.0,<4.0)",
    "defusedxml (>=0.6,<0.8)",
    "click (>=7.0,<9.0)",
    "rich (>=9.0,<14.0)"
]

[project.scripts]
ags4_cli = "python_ags4.ags4_cli:main"

[project.urls]
Homepage = "https://gitlab.com/ags-data-format-wg/ags-python-library"
Documentation = "https://ags-data-format-wg.gitlab.io/ags-python-library/index.html"
Mirror = "https://github.com/asitha-sena/python-AGS4"

[dependency-groups]
dev = [
    "pytest (>=7.3,<8.0)",
    "isort (>=5.0.0,<8.0.0)",
    "toml (>=0.10.2,<0.11.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
